--- a/src/scss/main/_responsive.scss
+++ b/src/scss/main/_responsive.scss
@@ -128,6 +128,7 @@
       padding: 100vh 1rem 0;
     }
 
+
     section.grid {
       padding: 100vh 1rem 0;
       grid-template-columns: repeat(auto-fill,minmax(322px,1fr))
@@ -196,9 +197,9 @@
     main {
       padding: 100vh 1rem 5rem;
     }
-    main.list {
-        padding: 2.5rem 1rem 0;
-    }
+    // main.list {
+    //   padding: 100vh 1rem 5rem;
+    // }
     /*Index Covers*/
     main.covers {
         grid-gap: 3rem;
