--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,7 +9,8 @@
 @import
   'components/type',
   'components/fffmodal',
-  'components/loading';
+  'components/loading',
+  'components/pageTransition';
 
 
   @import
