--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1410,6 +1410,33 @@ select:-webkit-autofill:focus {
   text-align: center;
 }
 
+body {
+  overflow-x: hidden;
+}
+
+.transition-fade {
+  transition: 500ms;
+  transform: translateX(100%);
+}
+
+.fade-in {
+  transform: translateX(0);
+}
+
+html.is-leaving .transition-fade {
+  opacity: 0;
+  transform: translateX(0);
+}
+
+.transition-swipe {
+  transition: 500ms;
+  transform: translateY(0);
+}
+
+html.is-animating .transition-swipe {
+  transform: translateY(100px);
+}
+
 @-webkit-keyframes blinker-dark-sun {
   0% {
     fill: var(--primary-color);
