--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,7 +10,8 @@
   'components/type',
   'components/fffmodal',
   'components/loading',
-  'components/pageTransition';
+  'components/pageTransition',
+  'components/button';
 
 
   @import
