--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -345,6 +345,16 @@ a:hover span.icon-right {
   transition: all 0.2s ease-in-out;
 }
 
+a.active {
+  color: var(--primary-color);
+  transition: color 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0ms;
+}
+
+a.active span.icon-right {
+  transform: rotate(90deg);
+  transition: all 0.2s ease-in-out;
+}
+
 @font-face {
   font-family: HelveticaNeueLTPro-Roman;
   src: url("/assets/fonts/HelveticaNeueLTPro-Roman.woff2") format("woff2"), url("/assets/fonts/HelveticaNeueLTPro-Roman.woff") format("woff"), url("/assets/fonts/HelveticaNeueLTPro-Roman.ttf") format("ttf");
@@ -1394,31 +1404,44 @@ select:-webkit-autofill:focus {
   text-align: center;
 }
 
-body {
-  overflow-x: hidden;
-}
-
-.transition-fade {
-  transition: 500ms;
-  transform: translateX(100%);
-}
-
-.fade-in {
-  transform: translateX(0);
-}
-
-html.is-leaving .transition-fade {
+.title-animation {
   opacity: 0;
-  transform: translateX(0);
+  transform: translateY(200%);
+  transform-origin: 0% 0%;
+  transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-.transition-swipe {
-  transition: 500ms;
+.menu-animation {
+  opacity: 0;
+  transform: translateY(100%);
+  transform-origin: 0% 0%;
+  transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.cover-animation {
+  opacity: 0;
+  transform: translateY(50%);
+  transform-origin: 0% 0%;
+  transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1), transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.fade-up {
+  opacity: 1;
+  transform-origin: 100% 0%;
   transform: translateY(0);
 }
 
-html.is-animating .transition-swipe {
-  transform: translateY(100px);
+.fade-up-covers {
+  transition-delay: 0.75s;
+  opacity: 1;
+  transform-origin: 100% 0%;
+  transform: translateY(0);
+}
+
+.fade-up-menu {
+  opacity: 1;
+  transform-origin: 100% 0%;
+  transform: translateY(0);
 }
 
 .btn {
@@ -3026,7 +3049,7 @@ main {
 
 main.covers {
   display: grid;
-  padding: 25rem 1rem 5rem;
+  padding: 15rem 1rem 5rem;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10rem 1rem;
   align-items: flex-end;
@@ -3066,7 +3089,7 @@ main.covers .project.small {
 
 @media (min-width: 1440px) and (max-width: 1680px) {
   main.covers {
-    padding: 28rem 1rem 5rem;
+    padding: 20rem 1rem 5rem;
   }
 
   main {
