--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1377,31 +1377,88 @@ select:-webkit-autofill:focus {
 }
 
 #preload-homepage {
-  display: none;
+  width: 100vw;
+  height: 100vh;
   z-index: 1001;
   position: fixed;
+  display: flex;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  overflow-y: scroll;
   justify-content: center;
-  transition: background var(--duration) ease;
-  background-color: var(--background-color-alpha);
-  -webkit-backdrop-filter: saturate(180%) blur(150px);
-          backdrop-filter: saturate(180%) blur(150px);
-}
-
-#preload-homepage .intro {
   align-items: center;
-  grid-auto-flow: row;
-  grid-template-columns: repeat(3, 1fr);
-  padding: calc(var(--lineHeight) * 3);
+  pointer-events: none;
 }
 
-#preload-homepage .intro .intro-items {
-  text-align: center;
+#preload-homepage #loader-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+}
+
+#preload-homepage #loader-txt-wrap {
+  opacity: 1;
+  font-size: 10vw;
+}
+
+#preload-homepage #loader-txt-wrap .loader-txt {
+  opacity: 0;
+  float: left;
+  transform: translate3d(0, -100vh, 0);
+}
+
+#preload-homepage.is-desktop #loader-bg {
+  font-size: 10vw;
+  overflow: hidden;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt {
+  opacity: 1;
+  float: left;
+  transform: translate3d(0, 100%, 0);
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.01s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.01s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(2) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.05s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.05s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(3) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.1s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(4) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.15s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.15s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(5) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.2s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.2s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(6) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.25s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.25s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(7) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.3s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(8) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.35s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.35s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(9) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.4s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(10) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.45s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.45s;
+}
+
+#preload-homepage.is-desktop #loader-txt-wrap .loader-txt:nth-child(11) {
+  transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s, opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
 }
 
 .title-animation {
@@ -1914,16 +1971,6 @@ footer {
     grid-row: 2;
     align-self: start;
     justify-self: start;
-  }
-
-  .intro-items h1.xlarge {
-    font-size: 2em;
-  }
-
-  .intro-items h1 {
-    font-size: 1.5em;
-    margin-top: calc(var(--lineHeight) * 1);
-    margin-bottom: calc(var(--lineHeight) * 1);
   }
 }
 
