--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -25,9 +25,16 @@
     .loader-txt {
       opacity: 0;
       float: left;
+      transform-origin: 0% 0%;
       transform: translate3d(0, -100vh, 0);
     }
   }
+}
+
+.loader-txt.fade-up{
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-delay: 1s;
 }
 
 #preload-homepage.is-desktop {
@@ -82,6 +89,21 @@
     .loader-txt:nth-child(11) {
       transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s,
         opacity 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
+    }
+  }
+}
+
+
+
+#preload-homepage.preload-end {
+  #loader-txt-wrap {
+    .loader-txt {
+      opacity: 1;
+      float: left;
+      transform-origin: 0% 0%;
+      transform: translate3d(0, -100vh, 0);
+      transition: transform 2s cubic-bezier(0.86, 0, 0.07, 1), opacity 2s cubic-bezier(0.86, 0, 0.07, 1),
+      transform-origin 2s cubic-bezier(0.86, 0, 0.07, 1);
     }
   }
 }
