--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -16,7 +16,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: #fff;
+    background: var(--primary-color);
   }
 
   #loader-txt-wrap {
@@ -25,6 +25,7 @@
     .loader-txt {
       opacity: 0;
       float: left;
+      color: var(--background-color);
       transform-origin: 0% 0%;
       transform: translate3d(0, -100vh, 0);
     }
