--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -16,18 +16,18 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: var(--primary-color);
+    background: var(--background-color);
   }
 
   #loader-txt-wrap {
     opacity: 1;
-    font-size: 10vw;
+    font-size: 5vw;
+    height: 10vw;
     .loader-txt {
       opacity: 0;
       float: left;
-      color: var(--background-color);
-      transform-origin: 0% 0%;
-      transform: translate3d(0, -100vh, 0);
+      color: var(--foreound-color);
+      transform: translate3d(0, -100%, 0);
     }
   }
 }
@@ -40,10 +40,12 @@
 
 #preload-homepage.is-desktop {
   #loader-bg {
-    font-size: 10vw;
-    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   #loader-txt-wrap {
+    overflow: hidden;
     .loader-txt {
       opacity: 1;
       float: left;
@@ -96,15 +98,13 @@
 
 
 
-#preload-homepage.preload-end {
-  #loader-txt-wrap {
-    .loader-txt {
-      opacity: 1;
-      float: left;
-      transform-origin: 0% 0%;
-      transform: translate3d(0, -100vh, 0);
-      transition: transform 2s cubic-bezier(0.86, 0, 0.07, 1), opacity 2s cubic-bezier(0.86, 0, 0.07, 1),
-      transform-origin 2s cubic-bezier(0.86, 0, 0.07, 1);
+  #preload-homepage.preload-end {
+    #loader-txt-wrap {
+      overflow: hidden;
+      .loader-txt {
+        opacity: 1;
+        transform: translate3d(0, -200%, 0);
+        transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1);
+      }
     }
   }
-}
