--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -76,6 +76,7 @@ body {
   box-sizing: border-box;
   font-smooth: antialiased;
   text-transform: uppercase;
+  cursor: url("data:image/svg+xml;charset=UTF-8,<svg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M25 12.5C25 19.4036 19.4036 25 12.5 25C5.59644 25 0 19.4036 0 12.5C0 5.59644 5.59644 0 12.5 0C19.4036 0 25 5.59644 25 12.5Z' fill='rgb(255, 76, 0)'/></svg>"), auto;
 }
 
 main {
@@ -96,6 +97,13 @@ main {
     padding-bottom: calc(var(--lineHeight) * 2);
   }
 }
+
+// .custom-cursor {
+//   cursor: url("data:image/svg+xml;charset=UTF-8,<svg width='48' height='42' viewBox='0 0 48 42' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M43.5 21H36V15C36 11.6906 38.6906 9 42 9H42.75C43.9969 9 45 7.99688 45 6.75V2.25C45 1.00312 43.9969 0 42.75 0H42C33.7125 0 27 6.7125 27 15V37.5C27 39.9844 29.0156 42 31.5 42H43.5C45.9844 42 48 39.9844 48 37.5V25.5C48 23.0156 45.9844 21 43.5 21ZM16.5 21H9V15C9 11.6906 11.6906 9 15 9H15.75C16.9969 9 18 7.99688 18 6.75V2.25C18 1.00312 16.9969 0 15.75 0H15C6.7125 0 0 6.7125 0 15V37.5C0 39.9844 2.01562 42 4.5 42H16.5C18.9844 42 21 39.9844 21 37.5V25.5C21 23.0156 18.9844 21 16.5 21Z' fill='black'/></svg>"), auto;
+//   background-size: 48px 42px;
+//   height: 42px;
+//   width: 48px;
+// }
 
 .lazy {
   transition-property: filter;
