--- a/src/scss/components/_pageTransition.scss
+++ b/src/scss/components/_pageTransition.scss
@@ -8,7 +8,7 @@
 
 .menu-animation {
   opacity: 0;
-  transform: translateY(100%);
+  transform: translateY(800px);
   transform-origin: 0% 0%;
   transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1),
   transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
@@ -29,6 +29,23 @@
   opacity: 1;
   transform-origin: 100% 0%;
   transform: translateY(0);
+  transition-delay: 1s;
+}
+
+
+.fast-animation {
+  opacity: 0;
+  transform: translateY(800px);
+  transform-origin: 0% 0%;
+  transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1), opacity 0.3s cubic-bezier(0.86, 0, 0.07, 1),
+  transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.fade-up-fast {
+  opacity: 1;
+  transform-origin: 100% 0%;
+  transform: translateY(0);
+  transition-delay: 0.3s;
 }
 
 .fade-up-covers {
@@ -42,4 +59,5 @@
   opacity: 1;
   transform-origin: 100% 0%;
   transform: translateY(0);
+  transition-delay: 1s;
 }
