--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -102,15 +102,16 @@ header:not(.post-header) {
   justify-self: end;
   pointer-events: none;
   width: 100%;
-  transition: width 1s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: width 1.5s cubic-bezier(0.39, 0.575, 0.565, 1);
   .noise {
+    overflow: hidden;
     .title {
       position: relative;
       font-size: 14.4vw;
       line-height: 16.8vw;
       top: 50vh;
-      transition: font-size 0.3s cubic-bezier(0.86, 0, 0.07, 1),
-      top 1s cubic-bezier(0.86, 0, 0.07, 1);
+      transition: font-size 0.3s cubic-bezier(0.39, 0.575, 0.565, 1),
+      top 1s cubic-bezier(0.39, 0.575, 0.565, 1);
     }
   }
 }
@@ -124,6 +125,7 @@ header:not(.post-header) {
     overflow: hidden;
     .title {
       top: 0;
+      transition: top 1s cubic-bezier(0.39, 0.575, 0.565, 1);
     }
   }
 }
@@ -131,7 +133,7 @@ header:not(.post-header) {
 .scroll-active {
   pointer-events: all;
   width: 10%;
-  transition: width 1s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: width 1.5s cubic-bezier(0.39, 0.575, 0.565, 1);
   .noise {
     position: absolute;
     top: 0;
@@ -143,7 +145,7 @@ header:not(.post-header) {
       top: 0;
       line-height: 0px;
       right: 1em;
-      transition: font-size 0.3s cubic-bezier(0.86, 0, 0.07, 1), top 1s cubic-bezier(0.86, 0, 0.07, 1);;
+      transition: font-size 0.3s cubic-bezier(0.39, 0.575, 0.565, 1), top 1s cubic-bezier(0.39, 0.575, 0.565, 1);
     }
   }
 }
@@ -160,21 +162,16 @@ header:not(.post-header) {
       grid-column: 2 / 3;
     }
     .home-logo,
-    .scroll-logo {
+    .scroll-active {
       grid-column: 3 / 5;
       justify-self: end;
     }
   }
   .home-logo {
-    svg {
-      top: 0;
-      transform: scale(2, 2);
-    }
+
   }
-  .scroll-logo {
-    svg {
-      transform: scale(1, 1);
-    }
+  .scroll-active {
+
   }
 }
 
@@ -183,51 +180,73 @@ header:not(.post-header) {
     height: 100vh;
     grid-template-columns: 1fr 1fr;
     padding: 1em;
-    transition: heihgt 0.8s ease-in-out;
+    transition: heihgt 0.3s ease-in-out;
     .dark-mode-toggle {
       grid-column: 1 / 3;
-      grid-row: 2;
+      grid-row: 1;
       justify-self: end;
       align-self: end;
+      svg {
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
     }
     .desktop-nav {
-      font-size: 45px;
-      line-height: 48px;
+      font-size: 26px;
+      line-height: 30px;
       grid-column: 1 / 3;
-      top: calc(100vh - 125px);
-      position: absolute;
+      position: relative;
       flex-direction: column;
-      align-items: start;
-      justify-content: start;
-      transition: top 0.8s ease-in-out, font-size 0.4s linear;
+      align-items: flex-start;
+      justify-content: center;
+      transition: bottom 0.8s ease-in-out, font-size 0.4s linear;
     }
 
     .scroll-nav {
-      font-size: 18px;
-      line-height: 30px;
-      top: -7px;
-      transition: top 0.8s ease-in-out, font-size 0.4s linear;
+      bottom: -300px;
+      transition: bottom 0.8s ease-in-out, font-size 0.4s linear;
+      transition-delay: 0.5s;
+      position: relative;
+    }
+
+    .scroll-nav-active {
+      bottom: 1px;
+      transition: bottom 0.8s ease-in-out, font-size 0.4s linear;
+      transition-delay: 0.5s;
+      position: relative;
     }
 
     .home-logo {
-      grid-column: 2 / 3;
-      justify-self: end;
+      grid-column: 1 / 3;
+      justify-self: start;
       align-self: start;
       grid-row: 1;
       width: 100%;
-      svg {
-        transform: scale(2.1, 2.1);
+      .noise {
+        overflow: hidden;
+        .title {
+          font-size: 13.8vw;
+          line-height: 16.8vw;
+        }
       }
     }
-    .scroll-logo {
+    .scroll-active {
       grid-column: 2 / 3;
       align-self: start;
       grid-row: 1;
-      svg {
-        transform: scale(1, 1);
-        transform-origin: top right;
-        transition: transform 0.8s ease-in-out,
-          transform-origin 0.8s ease-in-out;
+      .noise {
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow: visible;
+        .title {
+          position: relative;
+          font-size: 7.9vw;
+          top: 0;
+          line-height: 30px;
+          right: 1em;
+          transition: font-size 0.3s cubic-bezier(0.39, 0.575, 0.565, 1), top 1s cubic-bezier(0.39, 0.575, 0.565, 1);
+        }
       }
     }
   }
